[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/CardReward.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Card.tscn" type="PackedScene" id=2]

[node name="CardReward" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
text = "Choose a Card to add to your Deck!"
align = 1

[node name="Node" type="Node" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="Node"]
margin_left = 215.879
margin_top = 173.447
margin_right = 857.879
margin_bottom = 473.447

[node name="Panel" type="Panel" parent="Node/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 635.0
margin_bottom = 293.0

[node name="card_left" parent="Node/PanelContainer/Panel" instance=ExtResource( 2 )]
position = Vector2( 103.695, 118.529 )

[node name="card_middle" parent="Node/PanelContainer/Panel" instance=ExtResource( 2 )]
position = Vector2( 313.138, 121.095 )

[node name="card_right" parent="Node/PanelContainer/Panel" instance=ExtResource( 2 )]
position = Vector2( 523.609, 119.042 )

[node name="Button" type="Button" parent="Node/PanelContainer/Panel"]
margin_left = 41.3126
margin_top = 217.624
margin_right = 167.313
margin_bottom = 247.624
text = "Pick"

[node name="Button2" type="Button" parent="Node/PanelContainer/Panel"]
margin_left = 252.296
margin_top = 217.624
margin_right = 378.296
margin_bottom = 247.624
text = "Pick"

[node name="Button3" type="Button" parent="Node/PanelContainer/Panel"]
margin_left = 458.659
margin_top = 217.624
margin_right = 584.659
margin_bottom = 247.624
text = "Pick"
[connection signal="pressed" from="Node/PanelContainer/Panel/Button" to="." method="_on_pick_left"]
[connection signal="pressed" from="Node/PanelContainer/Panel/Button2" to="." method="_on_pick_middle"]
[connection signal="pressed" from="Node/PanelContainer/Panel/Button3" to="." method="_on_pick_right"]
